--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/leafer?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 spring.datasource.initialSize=2
 spring.datasource.minIdle=2
